Add test for pet CRUD ops

--- a/backend/config/config.sample.yml
+++ b/backend/config/config.sample.yml
@@ -7,7 +7,7 @@ databases:
   default:
     ENGINE: 'mongodb'
     DRIVER: 'motor'
-    NAME: 'tancho_db'
+    NAME: 'tancho_test_db'
     USER: 'tancho_user'
     PASSWORD: '4dm1n4dm1n'
     HOST: 'mongo'
