--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     build: .
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
-      - ./tancho:/tancho
+      - ./backend:/tancho
     ports:
       - "8000:8000"
     depends_on:
