--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -29,4 +29,5 @@ jobs:
       run: |
         pip install pytest
         cd backend
+        sudo docker run --name mongo -d -p 27017:27017 mongo
         python -m pytest
