--- a/.gitignore
+++ b/.gitignore
@@ -168,4 +168,4 @@ yarn-error.log
 
 # End of https://www.gitignore.io/api/vuejs,flask,python
 
-backend/tancho/config/config.yml
+backend/config/config.yml
