Add aws task definition

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.8
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE=1
 
-ADD /backend /tancho/
+ADD . /tancho/
 ADD requirements.txt /tancho/
 WORKDIR /tancho
 
