--- a/backend/config/config.ci.yml
+++ b/backend/config/config.ci.yml
@@ -7,6 +7,6 @@ databases:
   default:
     ENGINE: 'mongodb'
     DRIVER: 'motor'
-    NAME: 'tancho_test_db'
+    NAME: 'tancho_ci_db'
     HOST: '127.0.0.1'
     PORT: '27017'
