Add note about the name of the backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ volumes:
     mongo_data:
 
 services:
-  # Our main app
+  # Our main app tancho==backend
   tancho:
     build: ./backend/
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
