--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,12 +16,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        cd backend/
         pip install -r requirements.txt
         sudo docker run --name mongo -d -p 27017:27017 mongo
     - name: Lint with flake8
       run: |
-        cd backend
         pip install flake8
+        cd backend/
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -29,5 +30,5 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        cd backend
+        cd backend/
         python -m pytest
