--- a/backend/config/config.ci.yml
+++ b/backend/config/config.ci.yml
@@ -3,6 +3,13 @@
 fastapi:
   debug: true
 
+api:
+  versions:
+    current: v1
+    supported:
+    deprecated:
+    unsupported:
+
 databases:
   default:
     ENGINE: 'mongodb'
