Remove unnecessary file binding

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,8 @@ ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE=1
 
 ADD . /tancho/
-ADD requirements.txt /tancho/
 WORKDIR /tancho
 
 RUN pip install -r requirements.txt
+
+EXPOSE 8000
