--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^4.6.95",
     "axios": "^0.19.0",
     "buefy": "^0.8.8",
     "core-js": "^3.4.3",
