--- a/backend/tancho/config/config.sample.yml
+++ b/backend/tancho/config/config.sample.yml
@@ -8,7 +8,7 @@ databases:
     ENGINE: 'mongodb'
     DRIVER: 'motor'
     NAME: 'tancho_db'
-    USER: 'tancho_user'
+    USER: 'tancho'
     PASSWORD: '4dm1n4dm1n'
     HOST: 'mongo'
-    PORT: '27017'
+    PORT: 27017
